add entities: bank, device and language
