# src/Entity/Language.php
@@ -1,0 +1,144 @@
+<?php
+
+namespace App\Entity;
+
+use Doctrine\ORM\Mapping as ORM;
+use WizardsRest\Annotation\Exposable;
+use Symfony\Component\Validator\Constraints as Assert;
+use WizardsRest\Annotation\Type;
+
+/**
+ * @ORM\Entity
+ * @ORM\Table(name="language")
+ *
+ * @Type("languages")
+ */
+class Language
+{
+    /**
+     * @var int
+     *
+     * @ORM\Column(name="id", type="integer")
+     * @ORM\Id
+     * @ORM\GeneratedValue(strategy="AUTO")
+     *
+     * @Exposable
+     */
+    private $id;
+
+    /**
+     * @var string
+     *
+     * @ORM\Column(name="name", type="string")
+     *
+     * @Assert\NotBlank()
+     *
+     * @Exposable
+     */
+    private $name;
+
+    /**
+     * @var string
+     *
+     * @ORM\Column(name="iso", type="string")
+     *
+     * @Assert\NotBlank()
+     *
+     * @Exposable
+     */
+    private $iso;
+
+    /**
+     * @ORM\Column(name="created_at", type="integer")
+     *
+     * @Exposable
+     */
+    private $createdAt;
+
+    /**
+     * @ORM\Column(name="updated_at", type="integer")
+     *
+     * @Exposable
+     */
+    private $updatedAt;
+
+    /**
+     * @return int
+     */
+    public function getId(): int
+    {
+        return $this->id;
+    }
+
+    /**
+     * @param int $id
+     */
+    public function setId(int $id): void
+    {
+        $this->id = $id;
+    }
+
+    /**
+     * @return string
+     */
+    public function getName(): string
+    {
+        return $this->name;
+    }
+
+    /**
+     * @param string $name
+     */
+    public function setName(string $name): void
+    {
+        $this->name = $name;
+    }
+
+    /**
+     * @return string
+     */
+    public function getIso(): string
+    {
+        return $this->iso;
+    }
+
+    /**
+     * @param string $iso
+     */
+    public function setIso(string $iso): void
+    {
+        $this->iso = $iso;
+    }
+
+    /**
+     * @return int
+     */
+    public function getCreatedAt()
+    {
+        return $this->createdAt;
+    }
+
+    /**
+     * @param int $createdAt
+     */
+    public function setCreatedAt(int $createdAt): void
+    {
+        $this->createdAt = $createdAt;
+    }
+
+    /**
+     * @return int
+     */
+    public function getUpdatedAt()
+    {
+        return $this->updatedAt;
+    }
+
+    /**
+     * @param int $updatedAt
+     */
+    public function setUpdatedAt(int $updatedAt): void
+    {
+        $this->updatedAt = $updatedAt;
+    }
+}
